--- a/app.json
+++ b/app.json
@@ -1,14 +1,13 @@
 {
   "expo": {
-    "name": "native",
-    "slug": "native",
+    "name": "Shopnote",
+    "slug": "Shopnote",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
-      "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#f7DAd9"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
@@ -23,7 +22,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.kaushik.shopnote"
     },
     "web": {
       "favicon": "./assets/favicon.png"
